--- a/source/blocks/main-nav/main-nav.scss
+++ b/source/blocks/main-nav/main-nav.scss
@@ -228,9 +228,7 @@
 
 @media (min-width: $tablet-width) {
   .main-nav {
-    @include col();
-    @include size(12);
-
+    width: 100%;
     background-color: #000000;
   }
 
