--- a/source/blocks/reviews/reviews.scss
+++ b/source/blocks/reviews/reviews.scss
@@ -147,7 +147,7 @@
   .reviews__item {
     min-height: 160px;
     padding-top: 35px;
-    padding-right: 7.40%;
+    padding-right: 40px;
     padding-bottom: 35px;
     padding-left: 140px;
   }
@@ -228,10 +228,12 @@
 
 @media (min-width: $desktop-width) {
   .reviews {
-    @include row-flex();
-
     justify-content: center;
     padding-bottom: 100px;
+  }
+
+  .reviews__wrapper {
+    @include wrapper();
   }
 
   .reviews__title {
