--- a/source/blocks/slider/slider.scss
+++ b/source/blocks/slider/slider.scss
@@ -4,6 +4,64 @@
   list-style: none;
 }
 
+.slider__list .slick-dots {
+  position: absolute;
+  right: 0;
+  bottom: -25px;
+  left: 0;
+  display: block;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.slider__list .slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slider__list .slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  cursor: pointer;
+  color: transparent;
+  border: 0;
+  outline: none;
+  background: transparent;
+}
+
+.slider__list .slick-dots li.slick-active button:before {
+  opacity: .75;
+  color: black;
+}
+
+.slider__list .slick-dots li button:before {
+  font-family: 'slick';
+  line-height: 20px;
+  position: absolute;
+  content: '•';
+  text-align: center;
+  opacity: .25;
+  color: black;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slider__list .slick-dots li button:hover:before,
+.slider__list .slick-dots li button:focus:before {
+  opacity: 1;
+}
+
 .slider__toggle {
   width: 8px;
   height: 8px;
