--- a/docs/libs/slick/slick-theme.css
+++ b/docs/libs/slick/slick-theme.css
@@ -122,12 +122,11 @@
 .slick-dots
 {
     position: absolute;
-    right: 0;
     bottom: -25px;
-    left: 0;
 
     display: block;
 
+    width: 100%;
     padding: 0;
     margin: 0;
 
