rewrited login, status; added form validation

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -314,9 +314,11 @@ input[type="radio"].visually-hidden {
   padding-left: 120px;
   padding-right: 120px; }
 
-/*.debugGrid {
+/*
+.debugGrid {
   @include debug(rgba(0, 0, 0, 0.4), 1px solid #ff0);
-}*/
+}
+*/
 @font-face {
   font-family: "PT Sans Narrow";
   font-style: normal;
@@ -330,7 +332,7 @@ input[type="radio"].visually-hidden {
   src: url("../fonts/PTSansNarrowBold.woff2") format("woff2"), url("../fonts/PTSansNarrowBold.woff") format("woff"); }
 
 .btn {
-  font-family: "PT Sans Narrow",sans-serif;
+  font-family: "PT Sans Narrow", sans-serif;
   cursor: pointer; }
 
 .ghost-btn {
@@ -492,19 +494,34 @@ textarea {
   input:active,
   textarea:active {
     border: 1px solid #999999; }
+  input:valid:not(:placeholder-shown),
+  textarea:valid:not(:placeholder-shown) {
+    border: 1px solid green; }
+  input:invalid:not(:focus):not(:placeholder-shown),
+  textarea:invalid:not(:focus):not(:placeholder-shown) {
+    border: 1px solid red;
+    outline: none; }
 
 .modal {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  box-shadow: 0 20px 30px 0px rgba(0, 0, 0, 0.75);
-  z-index: 2; }
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+          align-items: center; }
 
-.modal--show {
-  display: block; }
+.modal__content {
+  position: relative; }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2;
+  outline: none; }
 
 .page {
   min-width: 320px;
@@ -1200,7 +1217,7 @@ textarea {
   width: 100%;
   text-transform: none; }
 
-.login {
+.login__content {
   width: 320px;
   padding: 35px 20px;
   z-index: 3;
@@ -1304,14 +1321,28 @@ textarea {
   opacity: 0.3;
   pointer-events: none; }
 
-.login__btn {
-  min-width: unset;
-  width: 46%;
+.login__btn,
+.login__close-btn {
+  width: 130px;
   margin-top: 25px;
   padding: 12px;
   font-size: 18px;
   line-height: 24px;
   cursor: pointer; }
+
+.login__close-btn {
+  display: inline-block;
+  border: 1px solid #e5ddd5;
+  text-align: center;
+  text-transform: uppercase;
+  color: #000000;
+  background-color: transparent; }
+  .login__close-btn:hover, .login__close-btn:focus {
+    border: 1px solid #d5c9bd; }
+  .login__close-btn:active {
+    border: 1px solid transparent;
+    color: rgba(0, 0, 0, 0.3);
+    background-color: #d5c9bd; }
 
 .works {
   padding-bottom: 35px;
@@ -1604,13 +1635,12 @@ textarea {
   font-size: 18px;
   line-height: 24px; }
 
-.failure {
+.status__content {
   width: 320px;
-  min-height: 317px;
   padding: 55px 55px 45px 55px;
   background-color: #ffffff; }
 
-.failure__title {
+.status__title {
   margin: 0;
   margin-bottom: 15px;
   font-family: "PT Sans Narrow", sans-serif;
@@ -1621,39 +1651,7 @@ textarea {
   text-transform: uppercase;
   color: #000000; }
 
-.failure__text {
-  margin: 0;
-  padding: 0 25px;
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 18px;
-  line-height: 27px;
-  text-align: center;
-  color: #000000; }
-
-.failure__btn {
-  padding: 13px;
-  margin-top: 35px;
-  font-size: 18px;
-  line-height: 24px; }
-
-.success {
-  width: 320px;
-  height: 317px;
-  padding: 55px 55px 45px 55px;
-  background-color: #ffffff; }
-
-.success__title {
-  margin: 0;
-  margin-bottom: 15px;
-  font-family: "PT Sans Narrow", sans-serif;
-  font-size: 40px;
-  line-height: 40px;
-  font-weight: bold;
-  text-align: center;
-  text-transform: uppercase;
-  color: #000000; }
-
-.success__text {
+.status__text {
   margin: 0;
   padding: 0;
   font-family: "PT Sans Narrow", sans-serif;
@@ -1662,7 +1660,7 @@ textarea {
   text-align: center;
   color: #000000; }
 
-.success__btn {
+.status__btn {
   padding: 13px;
   margin-top: 35px;
   font-size: 18px;
@@ -2176,13 +2174,12 @@ textarea {
   .copyright__ghost-btn {
     padding-right: 30px;
     padding-left: 30px; }
-  .login {
+  .login__content {
     width: 460px;
     padding-top: 60px;
     padding-right: 70px;
     padding-bottom: 57px;
-    padding-left: 70px;
-    box-shadow: 0px 30px 30px 0px rgba(0, 0, 0, 0.75); }
+    padding-left: 70px; }
   .login__title {
     margin-bottom: 15px;
     font-size: 40px; }
@@ -2222,6 +2219,11 @@ textarea {
     .login__close-btn::after {
       -webkit-transform: rotate(-45deg);
               transform: rotate(-45deg); }
+    .login__close-btn:hover, .login__close-btn:focus {
+      border: none; }
+    .login__close-btn:active {
+      border: none;
+      background-color: transparent; }
   .works {
     padding-bottom: 65px; }
   .works__wrapper {
@@ -2370,11 +2372,7 @@ textarea {
     padding: 20px;
     font-size: 24px;
     line-height: 30px; }
-  .failure {
-    width: 460px;
-    padding-right: 80px;
-    padding-left: 80px; }
-  .success {
+  .status__content {
     width: 460px;
     padding-right: 80px;
     padding-left: 80px; } }
