--- a/source/blocks/status/status.scss
+++ b/source/blocks/status/status.scss
@@ -1,11 +1,10 @@
-.success {
+.status__content {
   width: 320px;
-  height: 317px;
   padding: 55px 55px 45px 55px;
   background-color: #ffffff;
 }
 
-.success__title {
+.status__title {
   margin: 0;
   margin-bottom: 15px;
   font-family: "PT Sans Narrow", sans-serif;
@@ -17,7 +16,7 @@
   color: #000000;
 }
 
-.success__text {
+.status__text {
   margin: 0;
   padding: 0;
   font-family: "PT Sans Narrow", sans-serif;
@@ -27,7 +26,7 @@
   color: #000000;
 }
 
-.success__btn {
+.status__btn {
   padding: 13px;
   margin-top: 35px;
   font-size: 18px;
@@ -35,7 +34,7 @@
 }
 
 @media (min-width: $tablet-width) {
-  .success {
+  .status__content {
     width: 460px;
     padding-right: 80px;
     padding-left: 80px;
