--- a/source/sass/mixins/modal.scss
+++ b/source/sass/mixins/modal.scss
@@ -1,13 +1,9 @@
 .modal {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 20px 30px 0px rgba(0, 0, 0, 0.75);
-  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.modal--show {
-  display: block;
+.modal__content {
+  position: relative;
 }
