--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "base/btn.scss";
 @import "base/inputs.scss";
 @import "../sass/mixins/modal.scss";
+@import "../sass/mixins/overlay.scss";
 @import "../blocks/page/page.scss";
 @import "../blocks/page-header/page-header.scss";
 @import "../blocks/main-nav/main-nav.scss";
@@ -25,5 +26,4 @@
 @import "../blocks/works/works.scss";
 @import "../blocks/price/price.scss";
 @import "../blocks/order/order.scss";
-@import "../blocks/failure/failure.scss";
-@import "../blocks/success/success.scss";
+@import "../blocks/status/status.scss";
