removed margin in body.page

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -524,8 +524,7 @@ textarea {
   outline: none; }
 
 .page {
-  min-width: 320px;
-  margin: 0 auto; }
+  min-width: 320px; }
 
 .page__top-panel {
   background-color: #f8f5f2; }
