--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -387,8 +387,9 @@ input[type="radio"].visually-hidden {
     background-color: #aeaeae; }
 
 .checkbox {
-  display: block;
+  display: inline-block;
   position: relative;
+  padding-right: 5px;
   padding-left: 60px;
   font-family: "PT Sans Narrow", sans-serif;
   font-size: 18px;
@@ -396,36 +397,30 @@ input[type="radio"].visually-hidden {
   font-style: normal;
   font-weight: normal;
   cursor: pointer; }
-  .checkbox::before {
-    position: absolute;
-    content: "";
-    left: 0;
-    width: 36px;
-    height: 36px;
-    border: 1px solid #e5ddd5;
-    background-color: #ffffff; }
-  .checkbox:hover::before {
+  .checkbox:hover > .checkbox__box {
     border: 1px solid #d5c9bd; }
-  .checkbox:active::before {
-    background-color: #d5c9bd; }
   .checkbox:focus-within {
     outline-color: #4d90fe;
     outline-offset: -2px;
     outline-style: auto;
     outline-width: 5px; }
+  .checkbox:active > .checkbox__box {
+    background-color: #d5c9bd; }
 
-.checkbox__indicator {
+.checkbox__box {
   position: absolute;
   content: "";
-  top: 10px;
-  left: 7px;
-  width: 22px;
-  height: 16px;
+  left: 0;
+  width: 36px;
+  height: 36px;
+  border: 1px solid #e5ddd5;
+  background-color: #ffffff;
   background-position: center;
   background-repeat: no-repeat; }
 
-input[type="checkbox"]:checked + .checkbox__indicator {
-  background-image: url("../img/checkbox-mark.svg"); }
+input[type="checkbox"]:checked + .checkbox__box {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 22 16'%3E%3Cg%3E%3Cpath d='M21.4.29a1 1 0 00-1.4 0L6.61 13.68l-4.9-4.9a1 1 0 00-1.42 0 1 1 0 000 1.41L5.9 15.8a1 1 0 001.41 0L21.4 1.71a1 1 0 000-1.42z'/%3E%3C/g%3E%3C/svg%3E");
+  background-size: 22px 16px; }
 
 .radio {
   display: inline-block;
@@ -1694,6 +1689,12 @@ textarea {
       padding-left: 20px;
       padding-right: 20px; } }
 
+@media (min-width: 530px) {
+  .order__add-services-item {
+    width: 50%; }
+    .order__add-services-item:nth-child(2) {
+      margin-top: 0; } }
+
 @media screen and (min-width: 768px) {
     .wrapper {
       padding-left: 64px;
@@ -2361,10 +2362,7 @@ textarea {
     .order legend::after {
       margin-left: 25px; }
   .order__add-services-item {
-    margin-top: 45px;
-    width: 50%; }
-    .order__add-services-item:nth-child(2) {
-      margin-top: 0; }
+    margin-top: 45px; }
   .order__btn {
     margin-top: 60px;
     padding: 20px;
