--- a/source/sass/base/inputs.scss
+++ b/source/sass/base/inputs.scss
@@ -1,6 +1,7 @@
 .checkbox {
-  display: block;
+  display: inline-block;
   position: relative;
+  padding-right: 5px;
   padding-left: 60px;
   font-family: "PT Sans Narrow", sans-serif;
   font-size: 18px;
@@ -9,22 +10,8 @@
   font-weight: normal;
   cursor: pointer;
 
-  &::before {
-    position: absolute;
-    content: "";
-    left: 0;
-    width: 36px;
-    height: 36px;
-    border: 1px solid #e5ddd5;
-    background-color: #ffffff;
-  }
-
-  &:hover::before {
-  border: 1px solid #d5c9bd;
-  }
-
-  &:active::before {
-  background-color: #d5c9bd;
+  &:hover > .checkbox__box, {
+    border: 1px solid #d5c9bd;
   }
 
   &:focus-within {
@@ -33,21 +20,27 @@
     outline-style: auto;
     outline-width: 5px;
   }
+
+  &:active > .checkbox__box {
+    background-color: #d5c9bd;
+  }
 }
 
-.checkbox__indicator {
+.checkbox__box {
   position: absolute;
   content: "";
-  top: 10px;
-  left: 7px;
-  width: 22px;
-  height: 16px;
+  left: 0;
+  width: 36px;
+  height: 36px;
+  border: 1px solid #e5ddd5;
+  background-color: #ffffff;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-input[type="checkbox"]:checked + .checkbox__indicator {
-  background-image: url("../img/checkbox-mark.svg");
+input[type="checkbox"]:checked + .checkbox__box {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 22 16'%3E%3Cg%3E%3Cpath d='M21.4.29a1 1 0 00-1.4 0L6.61 13.68l-4.9-4.9a1 1 0 00-1.42 0 1 1 0 000 1.41L5.9 15.8a1 1 0 001.41 0L21.4 1.71a1 1 0 000-1.42z'/%3E%3C/g%3E%3C/svg%3E");
+  background-size: 22px 16px;
 }
 
 .radio {
