--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -389,11 +389,14 @@ input[type="radio"].visually-hidden {
 .checkbox {
   display: inline-block;
   position: relative;
+  min-height: 37px;
+  padding-top: 3px;
   padding-right: 5px;
+  padding-bottom: 3px;
   padding-left: 60px;
   font-family: "PT Sans Narrow", sans-serif;
   font-size: 18px;
-  line-height: 36px;
+  line-height: 30px;
   font-style: normal;
   font-weight: normal;
   cursor: pointer; }
@@ -410,10 +413,13 @@ input[type="radio"].visually-hidden {
 .checkbox__box {
   position: absolute;
   content: "";
+  top: 50%;
   left: 0;
   width: 36px;
   height: 36px;
   border: 1px solid #e5ddd5;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   background-color: #ffffff;
   background-position: center;
   background-repeat: no-repeat; }
@@ -1731,8 +1737,7 @@ textarea {
     font-size: 24px;
     line-height: 30px; }
   .checkbox {
-    font-size: 24px;
-    line-height: 36px; }
+    font-size: 24px; }
   .radio {
     padding-top: 80px;
     font-size: 24px; }
