delete gulp-if, gulp-sourcemaps; change min-webP value

--- a/source/blocks/news/news.scss
+++ b/source/blocks/news/news.scss
@@ -96,7 +96,7 @@
   border-top-color: #826550;
 }
 
-.news__link:active .news__date, {
+.news__link:active .news__date {
   color: rgba(255, 255, 255, 0.3);
   background-color: #6a4d38;
 }
